# development_helper

./: Cargo.toml  README.md
src/: main.rs
src/commands/: open_changelog.rs  prepare_pr.rs  setup.rs
src/defaults/: default_changelog.txt
src/tools/: confy_wrapper.rs  find_matching_file.rs  find_matching_files.rs  git_wrapper.rs  open_editor.rs
