[package]
name = "development-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.0", features = ["derive"] }
confy = "0.4.0"
console = "0.15.1"
dialoguer = "0.10.2"
env = "0.0.0"
exitcode = "1.1.2"
log = "0.4.17"
regex = "1.6.0"
serde = "1.0.144"
serde_derive = "1.0.144"
walkdir = "2.3.2"
